--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,4 +6,6 @@
   <h4>本文</h4>
   <%= f.text_area :body %>
   <%= f.submit '保存' %>
+  <%= link_to "show", book_path(@book) %>
+  <%= link_to "back", new_book_path(@book) %>
 <% end %>
