--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <p>title:<%= @book.title %></p>
 <p>body:<%= @book.body %></p>
 
-<%= link_to "編集", books_path(@book) %>
-<%= link_to "削除", new_book_path(@book), method: :delete %>
+<%= link_to "edit", books_path(@book) %>
+<%= link_to "back", new_book_path(@book) %>
