--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,11 @@
-<h1>編集画面</h1>
+<h1>Editing Book</h1>
 <!-- form_with部分 -->
 <%= form_with model:@book, local: true do |f| %>
-  <h4>タイトル</h4>
+  <h4>Title</h4>
   <%= f.text_field :title %>
-  <h4>本文</h4>
+  <h4>Body</h4>
   <%= f.text_area :body %>
-  <%= f.submit '保存' %>
-  <%= link_to "show", book_path(@book) %>
-  <%= link_to "back", new_book_path(@book) %>
+  <br><%= f.submit 'Update Book' %></br>
+  <%= link_to "Show", book_path(@book) %> |
+  <%= link_to "Back", new_book_path(@book) %>
 <% end %>
