--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -3,8 +3,8 @@
 <table>
   <thead>
     <tr>
-    <th>title</th>
-    <th>body</th>
+    <th>Title</th>
+    <th>Body</th>
     <th></th>
     </tr>
   </thead>
@@ -19,9 +19,9 @@
       <%= book.body %>
       </td>
       <td>
-      <%= link_to "show", book_path(book.id) %>
-      <%= link_to "edit", edit_book_path(book.id) %>
-      <%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+      <%= link_to "Show", book_path(book.id) %>
+      <%= link_to "Edit", edit_book_path(book.id) %>
+      <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
       </td>
     </tr>
   <% end %>
