--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <p>title:<%= @book.title %></p>
 <p>body:<%= @book.body %></p>
 
-<%= link_to "edit", books_path(@book) %>
-<%= link_to "back", new_book_path(@book) %>
+<%= link_to "Edit", edit_book_path(@book) %> |
+<%= link_to "Back", new_book_path(@book) %>
