--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,5 +7,5 @@
   <%= f.text_area :body %>
   <br><%= f.submit 'Update Book' %></br>
   <%= link_to "Show", book_path(@book) %> |
-  <%= link_to "Back", new_book_path(@book) %>
+  <%= link_to "Back", books_path(@book) %>
 <% end %>
