--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
-<%= flash[:complete] %>
-<p id="notice"><%= notice %></p>
+<%= flash[:notice] %>
+
 
 <p>title:<%= @book.title %></p>
 <p>body:<%= @book.body %></p>
