--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,44 +1,52 @@
 <%= flash[:delete] %>
+<!--　ここから参考より　-->
+    
+    <!-- ここまで -->
 
-<h3>Books</h3>
+  <h3>Books</h3>
+  <table>
+    <thead>
+      <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th></th>
+      </tr>
+    </thead>
 
-<table>
-  <thead>
-    <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th></th>
-    </tr>
-  </thead>
+    <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td>
+        <%= book.title %>
+        </td>
+        <td>
+        <%= book.body %>
+        </td>
+        <td>
+        <%= link_to "Show", book_path(book.id) %>
+        <%= link_to "Edit", edit_book_path(book.id) %>
+        <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 
-  <tbody>
-  <% @books.each do |book| %>
-    <tr>
-      <td>
-      <%= book.title %>
-      </td>
-      <td>
-      <%= book.body %>
-      </td>
-      <td>
-      <%= link_to "Show", book_path(book.id) %>
-      <%= link_to "Edit", edit_book_path(book.id) %>
-      <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
-      </td>
-    </tr>
+  <h3>New book</h3>
+  <%= form_with model: @book, local:true do |f| %>
+    <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %>errors occured</h3>
+      <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+
+  <br><%= f.submit 'Create Book' %></br>
   <% end %>
-  </tbody>
-</table>
-
-<h3>New book</h3>
-<%= form_with model:@book, local:true do |f| %>
-
-<h4>Title</h4>
-<%= f.text_field :title %>
-
-<h4>Body</h4>
-<%= f.text_area :body %>
-
-<br><%= f.submit 'Create Book' %></br>
-
-<% end %>
