--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,15 @@
 
 <h1>Editing Book</h1>
 <!-- form_with部分 -->
-<%= form_with model:@book, local: true do |f| %>
+<%= form_with model: @book, local:true do |f| %>
+    <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %>errors occured</h3>
+      <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
