--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -1,5 +1,5 @@
 <h1>ようこそBookersへ！</h1>
 <p>Bookers では、さまざまな書籍に関するあなたの意見や<br>印象を共有し交換することができます</p>
 <!-- startを押すと投稿詳細画面へ -->
-<a href ="https://6bc411977a7848408e1be1fdfdac62ea.vfs.cloud9.us-east-1.amazonaws.com/books">start</a>
+<a href ="/books">start</a>
 
