--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -16,5 +16,5 @@
   <%= f.text_area :body %>
   <br><%= f.submit 'Update Book' %></br>
   <%= link_to "Show", book_path(@book) %> |
-  <%= link_to "Back", books_path(@book) %>
+  <%= link_to "Back", '/books' %>
 <% end %>
