--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,5 +5,5 @@
   <p>body:<%= @book.body %></p>
 
   <%= link_to "Edit", edit_book_path(@book) %> |
-  <%= link_to "Back", books_path(@book) %>
+  <%= link_to "Back", '/books' %>
 <% end %>
